# python-kingbirdclient

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
kingbirdclient/: __init__.py  cliargs.py  client.py  exceptions.py  shell.py  utils.py
kingbirdclient/api/: base.py  client.py  httpclient.py
kingbirdclient/api/v1/: client.py  quota_class_manager.py  quota_manager.py  sync_manager.py
kingbirdclient/auth/: keystone.py
kingbirdclient/commands/: README.rst  __init__.py
kingbirdclient/commands/v1/: base.py  quota_class_manager.py  quota_manager.py  sync_manager.py
kingbirdclient/common/: exc.py  exceptions.py  format_utils.py  i18n.py  sdk.py  utils.py
kingbirdclient/openstack/common/: cliutils.py  gettextutils.py  importutils.py  strutils.py
kingbirdclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
kingbirdclient/osc/: plugin.py
kingbirdclient/tests/: base.py  base_shell_test.py  test_client.py  test_help_and_bash_completion.py  test_httpclient.py  test_kingbirdclient.py  test_python-kingbirdclient.py  test_shell.py  test_utils.py
kingbirdclient/tests/v1/: test_quota_class_manager.py  test_quota_manager.py  test_sync_manager.py
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
