[metadata]
name = python-kingbirdclient
summary = Python client for Kingbird
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    kingbirdclient

[entry_points]
console_scripts =
    kingbird = kingbirdclient.shell:main

openstack.cli.extension =
    sync_engine = kingbirdclient.osc.plugin

openstack.sync_engine.v1 =
    quota_defaults = kingbirdclient.commands.v1.quota_manager:ListDefaults
    kb_quota_show = kingbirdclient.commands.v1.quota_manager:GlobalLimits
    quota_update = kingbirdclient.commands.v1.quota_manager:UpdateGlobalLimits
    quota_detail = kingbirdclient.commands.v1.quota_manager:ShowQuotaDetail
    quota_sync = kingbirdclient.commands.v1.quota_manager:SyncQuota
    quota_delete = kingbirdclient.commands.v1.quota_manager:DeleteQuota

    sync_create = kingbirdclient.commands.v1.sync_manager:ResourceSync
    sync_list = kingbirdclient.commands.v1.sync_manager:SyncList
    sync_show = kingbirdclient.commands.v1.sync_manager:SyncShow
    sync_delete = kingbirdclient.commands.v1.sync_manager:SyncDelete

    quota-class_show = kingbirdclient.commands.v1.quota_class_manager:ListQuotaClass
    quota-class_update = kingbirdclient.commands.v1.quota_class_manager:UpdateQuotaClass
    quota-class_delete = kingbirdclient.commands.v1.quota_class_manager:DeleteQuotaClass

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kingbirdclient/locale
domain = kingbirdclient

[update_catalog]
domain = kingbirdclient
output_dir = kingbirdclient/locale
input_file = kingbirdclient/locale/kingbirdclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kingbirdclient/locale/kingbirdclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
